<resources>
    <string name="app_name">Word Notes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="words">Words</string>
    <string name="ipa">IPA</string>
    <string name="meaning">Meaning</string>
    <string name="add_new_word_successfully">Add new word successfully</string>
    <string name="update_word_successfully">Update word successfully</string>
    <string name="word_must_not_be_empty">Word must not be empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="now">now</string>
    <string name="error_while_loading_word">Error while loading word</string>
    <string name="ipa_template">/%s/</string>

    <string name="pref_title_end_time">End time</string>
    <string name="pref_title_start_time">Start time</string>
    <string name="pref_title_remind">Remind</string>
    <string name="pref_title_number_of_reminds_a_day">Number of reminds a day</string>

    <string name="part_of_speech">Part of Speech</string>
    <string name="save">Save</string>
    <string name="add_new_word">Add new word</string>
    <string name="edit_word">Edit word</string>
    <string name="add_word">Add word</string>
    <string name="stop_remind">Stop remind</string>
    <string name="reminder">Reminder</string>
    <string name="search_hint">Search word</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_rationale">You must allow permission to use this feature</string>
    <string name="ok">OK</string>
    <string name="no_words_yet">No words yet</string>
    <string name="deleted_template">%d deleted</string>
    <string name="undo">Undo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="please_complete_all_information">Please complete all information</string>
    <string name="the_email_address_isnt_in_the_correct_format">The email address isn\'t in the correct format</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="confirm_password_didnt_match">Confirm password didn\'t match</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="start_time_must_be_sooner_than_end_time">Start time must be sooner than End time!</string>
    <string name="end_time_must_be_later_than_start_time">End time must be later than Start time!</string>
    <string name="error">Error!</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="choose_gender">Choose gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_gender">Your gender</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="your_username">Your username</string>
    <string name="your_email_address">Your email address</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_cant_change_email_address">You can\'t change email address.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="sending_email_message">Provide your account\'s email for which you want to reset your password.
        Then check your email to complete the process.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="sent">Sent</string>
    <string name="learning">Learning</string>
    <string name="choose_a_mode">Choose a mode</string>
    <string name="select_one_of_the_modes_below_to_start">Select one of the modes below to start</string>
    <string name="mix">Mix</string>
    <string name="word">Word</string>
    <string name="toggle_remind">Toggle remind</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <plurals name="remind_times">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>

    <plurals name="minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">yesterday</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="year">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
</resources>