...
                    app:layout_constraintEnd_toEndOf="@id/image_delete"
                    app:layout_constraintStart_toStartOf="@id/image_delete"
                    app:layout_constraintTop_toBottomOf="@id/image_delete" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_edit"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp">

                <ImageView
...
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/image_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_alarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
